# kconfig-frontends

./: .gitlab-ci.yml  .version  AUTHORS  CMakeLists.txt  README  configure.ac
cmake/: FindLibRegex.cmake  toolchain-i686-w64-mingw32.cmake
frontends/gconf/: gconf.c
frontends/mconf/: CMakeLists.txt  mconf.c
frontends/qconf/: Makefile.am  qconf.cc
libs/: CMakeLists.txt
libs/expand_env/: CMakeLists.txt  expand_env.h
libs/lxdialog/: CMakeLists.txt  util.c
libs/parser/: CMakeLists.txt  confdata.c  lconf.l  symbol.c  yconf.y
libs/pdcurses-3.4/: curses.h
libs/pdcurses-3.4/win32/: pdckbd.c
libs/wordexp/: CMakeLists.txt  _itoa.h  fnmatch.c  fnmatch_loop.c  wordexp.c
scripts/: ksync.list  ksync.sh
